--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p class="item-tow">Three Fashion</p>
                 </div>
         </nav>
-         <!-- color Scheme Switcher here  -->
+         <!-- color Scheme Switcher here  projects 1 -->
         <main>
             <div class="color-content">
                 <h1><a href="">Color Scheme Switcher</a></h1>
@@ -33,7 +33,7 @@
                 </h2>
             </div>
 
-             <!-- BMI Calculator here  -->
+             <!-- BMI Calculator here   projects 2-->
             <div class="container">
                 <h1>BMI Calculator</h1>
                 <form>
@@ -64,6 +64,28 @@
                 <div id="clock"></div>
             </div>
            </div>
+
+           <!-- Guess a projects 3............. -->
+           <div id="wrapper">
+              <h1 class="num-guss">Number guessing game</h1>
+              <div class="lorem">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, a!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing</p>
+              </div>
+           <br>
+           <form class="form">
+             <label for="guessfield" id="guess">Guess a number</label>
+             <input type="text" id="guessfield" class="guessfield">
+            <input type="submit" id="subt" value="submit guess" 
+              class="guessSubmit">
+            </form>
+            <div class="resultPares">
+                <p>Previous Guesses: <span class="guesses"></span></p>
+                <p>Guesses Remaining: <span class="lastResult">10</span></p>
+                <p class="lowOrhi"></p>  
+                </div>
+            </div>
+
         </main>
 
         <script src="../../three.js"></script>
