--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
               class="guessSubmit">
             </form>
             <div class="resultPares">
-                <p>Previous Guesses: <span class="guesses"></span></p>
+                <p class="previous">Previous Guesses: <span class="guesses"></span></p>
                 <p>Guesses Remaining: <span class="lastResult">10</span></p>
                 <p class="lowOrhi"></p>  
                 </div>
             </div>
-
         </main>
 
         <script src="../../three.js"></script>
